实现asyncData服务端和客户端混入组件data

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script type="module" src="/src/entry-client.js"></script>
     <script>
         window.__INITIAL_STATE__ = '<vuex-state>';
+        window.__ASYNC_DATAS__ = '<async-datas>';
     </script>
 </body>
 
